<resources>
    <string name="app_name">NavigationSample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">ホーム</string>
    <string name="next">次へ</string>
    <string name="second_title">セカンド</string>
    <string name="c" />
    <string name="choise1">選択肢１</string>
    <string name="choise2">選択肢２</string>
    <string name="s" />
    <string name="choise3">選択肢３</string>
    <string name="choise4">選択肢４</string>
    <string name="third_title">３</string>
</resources>